2008-01-15  Andreas Faerber  <andreas.faerber@web.de>

	* configure.ac: Add default G_BREAKPOINT implementation.
	Fix typo in breakpoint CPU output.

2007-12-23  Zoltan Varga  <vargaz@gmail.com>

	* src/glib.h: Include <limits.h>. Fixes #350482.

2007-11-21  Dick Porter  <dick@ximian.com>

	* src/gslist.c (g_slist_find_custom): Implement

	* src/glist.c (g_list_find_custom): Implement

	* test/list.c: Test g_list_find_custom()

	* test/slist.c: Test g_slist_find_custom()

2007-11-20  Dick Porter  <dick@ximian.com>

	* src/gstr.c: Implement g_strsplit_set() and re-implement
	g_strsplit() so it passes the additional tests. (g_strsplit()
	should treat multi-char delimiters as just a single token, rather
	than a set of delimiters.)

	* src/gslist.c: Implement g_slist_index(), g_slist_nth() and
	g_slist_nth_data().

	* test/string-util.c: Test g_strsplit_set() and more tests for
	g_strsplit().

	* test/slist.c: Test g_slist_nth() and
	g_slist_index().

2007-11-06  Geoff Norton  <gnorton@novell.com>

	* configure.ac: Check for libiconv_open as the previous check was failing against 
	some versions of libiconv.

2007-11-06  Andreas Faerber  <andreas.faerber@web.de>

	* test/Makefile.am: Fix noinst_PROGRAMS for automake 1.6.3
	                    Add support for VPATH

2007-11-06  Geoff Norton  <gnorton@novell.com>

	* configure.ac: Determing if glib-2.0 is installed and set HAVE_GLIB appropriately
	* test/Makefile.am: Only build test-glib if glib-2.0 is available

2007-11-05  Geoff Norton  <gnorton@novell.com>

	* configure.ac: Check for getpwent_r and wether libiconv is needed to be linked.
	Also look to see if we can use export-dynamic in the test suite.
	* test/Makefile.am: Get LDFLAGS from configure instead of setting them.
	* src/gerror.c: Implement g_clear_error.
	* src/glib.h: Only use the format, ... convention is HAVE_C99_SUPPORT is available.
	* src/gpath.c: Only use the getpwent_r codepath if getpwent_r is available.