@@ -1,4 +1,8 @@
+if CROSS_COMPILING
+SUBDIRS = src
+else
 SUBDIRS = src test
+endif
 
 EXTRA_DIST = autogen.sh README NEWS AUTHORS ChangeLog
 
